--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,26 +3,33 @@ name: Build and Push Docker Image to Docker Hub
 on:
   push:
     branches:
-      - main
+      - main  # Trigger this action on every push to the 'main' branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Run this job on an Ubuntu VM
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
+        # This checks out the repository code to the runner
 
+      # Step 2: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}  # GitHub Secret for Docker Hub username
+          password: ${{ secrets.DOCKER_PASSWORD }}  # GitHub Secret for Docker Hub password or access token
 
+      # Step 3: Build Docker Image
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/my-flask-app:${{ github.sha }} .
+        # Build the Docker image and tag it with the commit SHA as the tag
 
+      # Step 4: Push Docker Image to Docker Hub
       - name: Push Docker Image to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/my-flask-app:${{ github.sha }}
+        # Push the Docker image to Docker Hub with the same commit SHA tag
