--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-COPY . /app
-RUN pip install --no-cache-dir -r requirements.txt
+flask==2.1.0
+requests==2.26.0
+# any other Python packages you are using
