--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -3,33 +3,32 @@ name: Build and Push Docker Image to Docker Hub
 on:
   push:
     branches:
-      - main  # Trigger this action on every push to the 'main' branch
+      - main  # Trigger on push to 'main' branch
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Run this job on an Ubuntu VM
+    runs-on: ubuntu-latest  # Use latest Ubuntu runner
 
     steps:
-      # Step 1: Checkout code
+      # Step 1: Checkout repo code
       - name: Checkout code
         uses: actions/checkout@v2
-        # This checks out the repository code to the runner
 
-      # Step 2: Log in to Docker Hub
+      # Step 2: Login to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}  # GitHub Secret for Docker Hub username
-          password: ${{ secrets.DOCKER_PASSWORD }}  # GitHub Secret for Docker Hub password or access token
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Build Docker Image
+      # Step 3: Build Docker Image with SHA tag and also latest tag
       - name: Build Docker Image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/my-flask-app:${{ github.sha }} .
-        # Build the Docker image and tag it with the commit SHA as the tag
+          docker tag ${{ secrets.DOCKER_USERNAME }}/my-flask-app:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/my-flask-app:latest
 
-      # Step 4: Push Docker Image to Docker Hub
+      # Step 4: Push both tags to Docker Hub
       - name: Push Docker Image to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/my-flask-app:${{ github.sha }}
-        # Push the Docker image to Docker Hub with the same commit SHA tag
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-flask-app:latest
